--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date"></span>
-									<h2><a href="#">Data Cleaning in SQL<br />
+									<h2><a href="https://github.com/theengineer1299/bellabeat-analysis/blob/main/Bellabeat%20Analysis%20RMD.Rmd">Data Analysis with R<br />
 									</a></h2>
-									<p>In this project, I've cleaned housing data in SQL Server! <br />
+									<p>In this project, I've imported, cleaned and analyzed health data for Bellabeat ~ A health product focused company! <br />
 									 Enjoy exploring!!</a></h2>
 									</p>
 								</header>
-								<a href="#" class="image main"><img src="images/housing img.jpg" alt="" /></a>
+								<a href="https://github.com/theengineer1299/bellabeat-analysis/blob/main/Bellabeat%20Analysis%20RMD.Rmd" class="image main"><img src="images/Bellabeaat.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://github.com/theengineer1299/bellabeat-analysis/blob/main/Bellabeat%20Analysis%20RMD.Rmd" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
