--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<h2><a href="https://github.com/theengineer1299/bellabeat-analysis/blob/main/Bellabeat%20Analysis%20RMD.Rmd">Data Analysis with R<br />
 									</a></h2>
 									<p>In this project, I've imported, cleaned and analyzed health data for Bellabeat ~ A health product focused company! <br />
-									 Enjoy exploring!!</a></h2>
+									 Enjoy exploring the R Markdown File!!</a></h2>
 									</p>
 								</header>
 								<a href="https://github.com/theengineer1299/bellabeat-analysis/blob/main/Bellabeat%20Analysis%20RMD.Rmd" class="image main"><img src="images/Bellabeaat.jpg" alt="" /></a>
