--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/abdullah-haris-9971b199/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/abdullah-h-9971b199/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://github.com/theengineer1299" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
@@ -70,7 +70,7 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Data Exploration in SQL<br />
+										<h2><a href="#">Data Exploration in SQL ~ Coming Soon!!<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Coronavirus img.jpg" alt="" /></a>
@@ -82,7 +82,7 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Tableau Dashboards<br />
+										<h2><a href="#">Tableau Dashboard Project ~ Coming Soon!!<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/tableau-banner.png" alt="" /></a>
@@ -94,11 +94,11 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Check 19th Minute<br />
-										AlexTheAnalyst</a></h2>
+										<h2><a href="#">Upcoming Project<br />
+										~ Coming Soon!</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Coming Soon...</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -106,35 +106,35 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="#">Upcoming Project<br />
+										Coming Soon!!</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Coming Soon....</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<span class="date"></span>
+										<h2><a href="#">Upcoming Project<br />
+										Coming Soon!!r</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Coming Soon...</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
+										<span class="date"></span>
+										<h2><a href="#">Upcoming Project<br />
+										Coming Soon!!</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Coming Soon...</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
@@ -195,7 +195,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/abdullah-haris-9971b199/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/abdullah-h-9971b199/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/theengineer1299" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
