--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Data Exploration in SQL ~ Coming Soon!!<br />
-										</a></h2>
+										<h2><a href="#">Data Exploration in SQL <br />
+										~ Coming Soon!!</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/Coronavirus img.jpg" alt="" /></a>
 									<p>Data Exploration of Covid19 Dataset in SQL Server </p>
@@ -95,7 +95,7 @@
 									<header>
 										<span class="date"></span>
 										<h2><a href="#">Upcoming Project<br />
-										~ Coming Soon!</a></h2>
+										~ Coming Soon!!</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Coming Soon...</p>
@@ -107,7 +107,7 @@
 									<header>
 										<span class="date"></span>
 										<h2><a href="#">Upcoming Project<br />
-										Coming Soon!!</a></h2>
+										~ Coming Soon!!</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>Coming Soon....</p>
@@ -119,7 +119,7 @@
 									<header>
 										<span class="date"></span>
 										<h2><a href="#">Upcoming Project<br />
-										Coming Soon!!r</a></h2>
+										~ Coming Soon!!</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 									<p>Coming Soon...</p>
@@ -131,7 +131,7 @@
 									<header>
 										<span class="date"></span>
 										<h2><a href="#">Upcoming Project<br />
-										Coming Soon!!</a></h2>
+										~ Coming Soon!!</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 									<p>Coming Soon...</p>
