--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Data Exploration in SQL <br />
+										<h2><a href="https://github.com/theengineer1299/CovidProjectSQL/blob/main/Covid%20Portfolio%20Project.sql">Data Exploration in SQL <br />
 										~ Coming Soon!!</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/Coronavirus img.jpg" alt="" /></a>
+									<a href="https://github.com/theengineer1299/CovidProjectSQL/blob/main/Covid%20Portfolio%20Project.sql" class="image fit"><img src="images/Coronavirus img.jpg" alt="" /></a>
 									<p>Data Exploration of Covid19 Dataset in SQL Server </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/theengineer1299/CovidProjectSQL/blob/main/Covid%20Portfolio%20Project.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
