--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Tableau Dashboard Project ~ Coming Soon!!<br />
+										<h2><a href="https://public.tableau.com/app/profile/abdullah3487/viz/CovidPortfolioAnalysis/Dashboard1?publish=yes">Covid Analysis on Tableau Dashboard <br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/tableau-banner.png" alt="" /></a>
-									<p>Included are Various Dashboards of Creation in Tableau</p>
+									<a href="https://public.tableau.com/app/profile/abdullah3487/viz/CovidPortfolioAnalysis/Dashboard1?publish=yes" class="image fit"><img src="images/tableau-banner.png" alt="" /></a>
+									<p>An analysis on Covid Data from Jan-22-2020 to July-23-2021 of certain selected countries with an estimate for the upcoming monnths</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Dashboards</a></li>
+										<li><a href="https://public.tableau.com/app/profile/abdullah3487/viz/CovidPortfolioAnalysis/Dashboard1?publish=yes" class="button">View Dashboards</a></li>
 									</ul>
 								</article>
 								<article>
@@ -181,7 +181,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>Dehiwala, Colombo<br />
+								<p> Colombo, Sri Lanka <br />
 								</p>
 							</section>
 							<section>
