--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Abdullah Haris's Portfolio<br />
+						<h1>Abdullah's Portfolio<br />
 						</h1>
 						<p>A creative and innovative Data Analyst skilled in SQL, Tableau & R   <a href="https://www.linkedin.com/in/abdullah-haris-9971b199?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bd2DrbkoKT0aZdctqjT55%2FA%3D%3D">@AbdullahHaris</a> </a>.</p>
 						<ul class="actions">
@@ -74,7 +74,8 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/theengineer1299/CovidProjectSQL/blob/main/Covid%20Portfolio%20Project.sql" class="image fit"><img src="images/Coronavirus img.jpg" alt="" /></a>
-									<p>Data Exploration of Covid19 Dataset in SQL Server </p>
+									<p>Data Exploration of Covid19 Dataset in SQL Server
+									Data - https://ourworldindata.org/covid-deaths </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/theengineer1299/CovidProjectSQL/blob/main/Covid%20Portfolio%20Project.sql" class="button">View Project</a></li>
 									</ul>
