--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									</header>
 									<a href="https://github.com/theengineer1299/CovidProjectSQL/blob/main/Covid%20Portfolio%20Project.sql" class="image fit"><img src="images/Coronavirus img.jpg" alt="" /></a>
 									<p>Data Exploration of Covid19 Dataset in SQL Server
-									Data - https://ourworldindata.org/covid-deaths </p>
+									<a href="https://ourworldindata.org/covid-deaths">Data Source</a> </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/theengineer1299/CovidProjectSQL/blob/main/Covid%20Portfolio%20Project.sql" class="button">View Project</a></li>
 									</ul>
