--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/theengineer1299/CovidProjectSQL/blob/main/Covid%20Portfolio%20Project.sql" class="image fit"><img src="images/Coronavirus img.jpg" alt="" /></a>
-									<p>Data Exploration of Covid19 Dataset in SQL Server
+									<p>Data Exploration of Covid19 Dataset in SQL Server ~ 
 									<a href="https://ourworldindata.org/covid-deaths">Data Source</a> </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/theengineer1299/CovidProjectSQL/blob/main/Covid%20Portfolio%20Project.sql" class="button">View Project</a></li>
@@ -87,7 +87,7 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/abdullah3487/viz/CovidPortfolioAnalysis/Dashboard1?publish=yes" class="image fit"><img src="images/tableau-banner.png" alt="" /></a>
-									<p>An analysis on Covid Data from Jan-22-2020 to July-23-2021 of certain selected countries with an estimate for the upcoming months</p>
+									<p>An analysis on Covid Data from Jan-22-2020 to July-23-2021 of certain selected countries with an estimate for the upcoming months ~ <a href="https://ourworldindata.org/covid-deaths">Data Source</a></p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/abdullah3487/viz/CovidPortfolioAnalysis/Dashboard1?publish=yes" class="button">View Dashboards</a></li>
 									</ul>
