--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Abdullah's Portfolio<br />
 						</h1>
-						<p>A creative and innovative Data Analyst skilled in SQL, Tableau & R   <a href="https://www.linkedin.com/in/abdullah-haris-9971b199?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bd2DrbkoKT0aZdctqjT55%2FA%3D%3D">@AbdullahHaris</a> </a>.</p>
+						<p> Data Analyst skilled in Data Cleansing, Data Wrangling, Data Story-telling, Statistical Analysis, Predictive Analytics with Excel, SQL, Tableau & R   <a href="https://www.linkedin.com/in/abdullah-haris-9971b199?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bd2DrbkoKT0aZdctqjT55%2FA%3D%3D">@AbdullahHarisLinkedIn</a> </a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
