--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Upcoming Project<br />
-										~ Coming Soon!!</a></h2>
+										<h2><a href="#">Data Cleaning<br />
+										in SQL</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Coming Soon...</p>
+									<p>Data cleaning in MS SQLServer of housing data using Self Join, Substring, Parsename, ..... </p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
