--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Portfolio Projects</a></li>
-							<li><a href="generic.html">Blank</a></li>
+							<li><a href="https://documentcloud.adobe.com/link/track?uri=urn:aaid:scds:US:004af99c-f7b8-426b-b806-1cf174378102">DOWNLOAD RESUME/CV</a></li>
 					
 						</ul>
 						<ul class="icons">
