--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										in SQL</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Data cleaning in MS SQLServer of housing data using Self Join, Substring, Parsename, ..... </p>
+									<p>Data cleaning in MS SQLServer, of housing data with the use of Self Joins, Substring, Parsename and more! </p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
