--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<span class="date"></span>
 									<h2><a href="https://github.com/theengineer1299/bellabeat-analysis/blob/main/Bellabeat%20Analysis%20RMD.Rmd">Data Analysis with R<br />
 									</a></h2>
-									<p>In this project, I've imported, cleaned and analyzed health data for Bellabeat ~ A health product focused company! <br />
+									<p>In this project I've imported, cleaned and analyzed health data for Bellabeat ~ A health product focused company! <br />
 									 Enjoy exploring the R Markdown File!!</a></h2>
 									</p>
 								</header>
@@ -96,12 +96,13 @@
 									<header>
 										<span class="date"></span>
 										<h2><a href="#">Data Cleaning<br />
-										in SQL</a></h2>
+										in SQL of Housing Data</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Data cleaning in MS SQLServer, of housing data with the use of Self Joins, Substring, Parsename and more! </p>
+									<a href="https://github.com/theengineer1299/Portfolio-Projects/blob/main/DataCleaningHousing" class="image fit"><img src="images/housing img.jpg" alt="" /></a>
+									<p>Data cleaning in MS SQLServer, of housing data with the use of Self Joins, Substring, Parsename, Case Statements, CTE and more! 
+										~ <a href="https://ourworldindata.org/covid-deaths">Data Source</a> </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/theengineer1299/Portfolio-Projects/blob/main/DataCleaningHousing" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
