--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 									</header>
 									<a href="https://github.com/theengineer1299/Portfolio-Projects/blob/main/DataCleaningHousing" class="image fit"><img src="images/housing img.jpg" alt="" /></a>
 									<p>Data cleaning in MS SQLServer, of housing data with the use of Self Joins, Substring, Parsename, Case Statements, CTE and more! 
-										~ <a href="https://ourworldindata.org/covid-deaths">Data Source</a> </p>
+										~ <a href="https://github.com/AlexTheAnalyst/PortfolioProjects/blob/main/Nashville%20Housing%20Data%20for%20Data%20Cleaning.xlsx">Data Source</a> </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/theengineer1299/Portfolio-Projects/blob/main/DataCleaningHousing" class="button">View Project</a></li>
 									</ul>
