--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Data Cleaning<br />
+										<h2><a href="https://github.com/theengineer1299/Portfolio-Projects/blob/main/DataCleaningHousing">Data Cleaning<br />
 										in SQL of Housing Data</a></h2>
 									</header>
 									<a href="https://github.com/theengineer1299/Portfolio-Projects/blob/main/DataCleaningHousing" class="image fit"><img src="images/housing img.jpg" alt="" /></a>
