--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 								<article>
 									<header>
 										<span class="date"></span>
-										<h2><a href="#">Upcoming Project<br />
+										<h2><a href="#">Data Visualization in Power BI <br />
 										~ Coming Soon!!</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Coming Soon....</p>
+									<p>Data Analysis on Car Registration and Import Data </p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
